Modernize to FastAPI with uv and Docker
- Migrate from Flask to FastAPI with async support
- Replace requirements.txt with pyproject.toml using uv
- Add src-layout package structure
- Add Pydantic Settings for configuration
- Add async httpx client for Asterisk Manager
- Add Dockerfile with multi-stage uv build
- Add docker-compose with caddy-docker-proxy labels
- Add reports API and web UI for viewing QRT/PRT files
- Replace pylint with ruff for linting

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,36 @@
+# Editor files
 *~
 *.swp
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+*.egg-info/
+*.egg
+dist/
+build/
+
+# Virtual environments
+.venv/
+venv/
+ENV/
+
+# Environment files
+.env
+
+# IDE
+.idea/
+.vscode/
+*.sublime-*
+
+# Testing
+.pytest_cache/
+.coverage
+htmlcov/
+
+# OS
+.DS_Store
+Thumbs.db
